--- a/.gitignore
+++ b/.gitignore
@@ -25,28 +25,31 @@ MANIFEST
 venv/
 env/
 ENV/
-env.bak/
-venv.bak/
-
-# Flask
-instance/
-.webassets-cache
 
 # Database
 *.db
 *.sqlite
 *.sqlite3
 
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
 # Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
-# Vite
+# Build files
 dist/
-.vite/
+build/
 
 # Environment variables
 .env
@@ -55,24 +58,7 @@ dist/
 .env.test.local
 .env.production.local
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
 # Logs
-logs
 *.log
 
 # Runtime data
@@ -96,7 +82,7 @@ jspm_packages/
 # Optional REPL history
 .node_repl_history
 
-# Output of npm pack
+# Output of 'npm pack'
 *.tgz
 
 # Yarn Integrity file
